{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 27,
  "lineage": "1f6736ef-146e-69fa-8a1f-5a17baccb8b6",
  "resources": [
    {
      "module": "module.lb-asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:loadbalancer/app/jenkins-alb/130794fe90264e6d",
            "arn_suffix": "app/jenkins-alb/130794fe90264e6d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-alb-1878926178.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:loadbalancer/app/jenkins-alb/130794fe90264e6d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cb7313d9458938b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079a6283bb8d816c0"
              },
              {
                "subnet_id": "subnet-0c4f3f5ce893d33cf"
              },
              {
                "subnet_id": "subnet-0d9b976c2038a79ac"
              }
            ],
            "subnets": [
              "subnet-079a6283bb8d816c0",
              "subnet-0c4f3f5ce893d33cf",
              "subnet-0d9b976c2038a79ac"
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04c33231f540e69ea",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.lb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb-asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:listener/app/jenkins-alb/130794fe90264e6d/ae0a935d8e7b444e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:targetgroup/jks-lb20230426022943977000000001/23549857bdb0ec66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:listener/app/jenkins-alb/130794fe90264e6d/ae0a935d8e7b444e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:loadbalancer/app/jenkins-alb/130794fe90264e6d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb-asg.aws_lb.jenkins",
            "module.lb-asg.aws_lb_target_group.jenkins",
            "module.lb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb-asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:targetgroup/jks-lb20230426022943977000000001/23549857bdb0ec66",
            "arn_suffix": "targetgroup/jks-lb20230426022943977000000001/23549857bdb0ec66",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:100521722927:targetgroup/jks-lb20230426022943977000000001/23549857bdb0ec66",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jks-lb20230426022943977000000001",
            "name_prefix": "jks-lb",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04c33231f540e69ea"
          }
        }
      ]
    },
    {
      "module": "module.lb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:100521722927:security-group/sg-0cb7313d9458938b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb7313d9458938b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg20230426022943986500000003",
            "name_prefix": "alb-sg",
            "owner_id": "100521722927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-alb-sg"
            },
            "tags_all": {
              "Name": "jenkins-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c33231f540e69ea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.lb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:100521722927:security-group/sg-012d53c626352c56c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012d53c626352c56c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-controller-sg20230426022943984500000002",
            "name_prefix": "jenkins-controller-sg",
            "owner_id": "100521722927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-controller-sg"
            },
            "tags_all": {
              "Name": "jenkins-controller-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c33231f540e69ea"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}